--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,9 +14,22 @@ spec:
     spec:
       containers:
       - name: hello
-        image: us-central1-docker.pkg.dev/neon-trilogy-476216-j8/lab4-registry-task/hello:v1
+        image: us-central1-docker.pkg.dev/neon-trilogy-476216-j8/lab4-registry-task/hello:v2
         ports:
         - containerPort: 8888
+        env:
+        - name: ENVIRONMENT
+          value: "DEV"
+        - name: HOST
+          value: "0.0.0.0"
+        - name: PORT
+          value: "8888"
+        - name: REDIS_HOST
+          value: "redis"
+        - name: REDIS_PORT
+          value: "6379"
+        - name: REDIS_DB
+          value: "0"
       imagePullSecrets:
       - name: regcred
 ---
@@ -29,6 +42,37 @@ spec:
   selector:
     app: hello
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 8888
+  - protocol: TCP
+    port: 80
+    targetPort: 8888
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: redis
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: redis
+  template:
+    metadata:
+      labels:
+        app: redis
+    spec:
+      containers:
+      - name: redis
+        image: redis:5
+        ports:
+        - containerPort: 6379
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: redis
+spec:
+  selector:
+    app: redis
+  ports:
+  - port: 6379
+    targetPort: 6379
